Fixed URDF issues, edited launch file, added rviz file

--- a/BCI/src/bci_sim_arm/CMakeLists.txt
+++ b/BCI/src/bci_sim_arm/CMakeLists.txt
@@ -120,6 +120,12 @@ include_directories(
   ${catkin_INCLUDE_DIRS}
 )
 
+
+if(CATKIN_ENABLE_TESTIING)
+  find_package(roslaunch REQUIRED)
+  roslaunch_add_file_check(launch)
+endif()
+
 ## Declare a C++ library
 # add_library(${PROJECT_NAME}
 #   src/${PROJECT_NAME}/bci_sim_arm.cpp
@@ -172,14 +178,14 @@ include_directories(
 # )
 
 ## Mark cpp header files for installation
-# install(DIRECTORY include/${PROJECT_NAME}/
-#   DESTINATION ${CATKIN_PACKAGE_INCLUDE_DESTINATION}
+install(DIRECTORY images meshes launch rviz urdf
+  DESTINATION ${CATKIN_PACKAGE_SHARE_DESTINATION}
 #   FILES_MATCHING PATTERN "*.h"
 #   PATTERN ".svn" EXCLUDE
-# )
+)
 
 ## Mark other files for installation (e.g. launch and bag files, etc.)
-# install(FILES
+#  install(FILES
 #   # myfile1
 #   # myfile2
 #   DESTINATION ${CATKIN_PACKAGE_SHARE_DESTINATION}
